--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-funding-op-teaser/02-organisms-02-view-modes-funding-op-teaser.html
@@ -91,7 +91,7 @@
 		// handle injection of items from PHP
 		var patternPartial = "organisms-funding-op-teaser";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"molecules-homepage-views-funding-pane","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-_homepage-views-funding-pane\/01-molecules-04-panes-_homepage-views-funding-pane.html","lineageState":"inprogress"},{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
+		var lineageR       = [{"lineagePattern":"molecules-homepage-views-funding-pane","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-_homepage-views-funding-pane\/01-molecules-04-panes-_homepage-views-funding-pane.html","lineageState":"inprogress"},{"lineagePattern":"organisms-community-detail","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-community-detail\/02-organisms-01-content-types-community-detail.html","lineageState":"inprogress"},{"lineagePattern":"templates-card-types","lineagePath":"..\/..\/patterns\/03-templates-card-types\/03-templates-card-types.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
