--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.escaped.html
@@ -500,14 +500,14 @@
                         &lt;div class=&quot;view view-content-author&quot;&gt;
                           &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                             &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/animals/8/&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/city/6/&quot;&gt;
                             &lt;/div&gt;  
                           &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;layout-slat__content&quot;&gt;
                         &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://lorizzle.nl/&quot;&gt;Nullizzle shizznit velizzle, hizzle, suscipit own yo', gravida vizzle, arcu.&lt;/a&gt;
+                          &lt;a href=&quot;http://baconipsum.com/&quot;&gt;Bacon ipsum dolor sit amet turducken strip steak beef ribs shank&lt;/a&gt;
                         &lt;/h3&gt;
                         &lt;div class=&quot;node__posted-by&quot;&gt;
                           &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
@@ -516,7 +516,7 @@
                           &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                             &lt;div class=&quot;field-items&quot;&gt;
                               &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;Fizzle crazy tortor. Sed rizzle. Ass pimpin' dolor dapibizzle turpis tempizzle fo shizzle my nizzle. Maurizzle pellentesque its fo rizzle izzle turpis. Get down get down we gonna chung nizzle. Shizzlin dizzle eleifend rhoncizzle break it down. In yo ghetto platea dictumst. Bling bling dapibizzle. Curabitur break yo neck, yall fo, pretizzle eu, go to hizzle dope, own yo' vitae, nunc. Bizzle suscipizzle. Semper velit sizzle fo.&lt;/p&gt;
+                                &lt;p&gt;Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.&lt;/p&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
@@ -531,14 +531,14 @@
                         &lt;div class=&quot;view view-content-author&quot;&gt;
                           &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                             &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/abstract/4/&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/people/1/&quot;&gt;
                             &lt;/div&gt;  
                           &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;layout-slat__content&quot;&gt;
                         &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://www.cheeseipsum.co.uk/&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;
+                          &lt;a href=&quot;http://slipsum.com/lite/&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;
                         &lt;/h3&gt;
                         &lt;div class=&quot;node__posted-by&quot;&gt;
                           &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
@@ -547,7 +547,7 @@
                           &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                             &lt;div class=&quot;field-items&quot;&gt;
                               &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.&lt;/p&gt;
+                                &lt;p&gt;Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.&lt;/p&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
@@ -593,14 +593,14 @@
                         &lt;div class=&quot;view view-content-author&quot;&gt;
                           &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                             &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/technics/1/&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/sports/2/&quot;&gt;
                             &lt;/div&gt;  
                           &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;layout-slat__content&quot;&gt;
                         &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://web20ipsum.com&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;
+                          &lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;
                         &lt;/h3&gt;
                         &lt;div class=&quot;node__posted-by&quot;&gt;
                           &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
@@ -609,38 +609,7 @@
                           &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                             &lt;div class=&quot;field-items&quot;&gt;
                               &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.&lt;/p&gt;
-                              &lt;/div&gt;
-                            &lt;/div&gt;
-                          &lt;/div&gt;
-                        &lt;/div&gt;
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                    
-                  &lt;/div&gt;
-                  &lt;div class=&quot;views-row&quot;&gt;
-                    &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
-                      &lt;div class=&quot;layout-slat__media&quot;&gt;
-                        &lt;div class=&quot;view view-content-author&quot;&gt;
-                          &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
-                            &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/cats/1/&quot;&gt;
-                            &lt;/div&gt;  
-                          &lt;/div&gt;  
-                        &lt;/div&gt;
-                      &lt;/div&gt;
-                      &lt;div class=&quot;layout-slat__content&quot;&gt;
-                        &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;
-                        &lt;/h3&gt;
-                        &lt;div class=&quot;node__posted-by&quot;&gt;
-                          &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
-                        &lt;/div&gt;
-                        &lt;div class=&quot;node__summary&quot;&gt;
-                          &lt;div class=&quot;field field--discussion-desc&quot;&gt;
-                            &lt;div class=&quot;field-items&quot;&gt;
-                              &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;
+                                &lt;p&gt;Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.&lt;/p&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
@@ -686,14 +655,14 @@
                         &lt;div class=&quot;view view-content-author&quot;&gt;
                           &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                             &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/sports/2/&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/abstract/4/&quot;&gt;
                             &lt;/div&gt;  
                           &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;layout-slat__content&quot;&gt;
                         &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;
+                          &lt;a href=&quot;http://www.cheeseipsum.co.uk/&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;
                         &lt;/h3&gt;
                         &lt;div class=&quot;node__posted-by&quot;&gt;
                           &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
@@ -702,7 +671,38 @@
                           &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                             &lt;div class=&quot;field-items&quot;&gt;
                               &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.&lt;/p&gt;
+                                &lt;p&gt;Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.&lt;/p&gt;
+                              &lt;/div&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                    
+                  &lt;/div&gt;
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    &lt;div class=&quot;layout-slat node node--discussion node--listing view-mode-listing&quot;&gt;
+                      &lt;div class=&quot;layout-slat__media&quot;&gt;
+                        &lt;div class=&quot;view view-content-author&quot;&gt;
+                          &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
+                            &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/nightlife/3/&quot;&gt;
+                            &lt;/div&gt;  
+                          &lt;/div&gt;  
+                        &lt;/div&gt;
+                      &lt;/div&gt;
+                      &lt;div class=&quot;layout-slat__content&quot;&gt;
+                        &lt;h3 class=&quot;node__title&quot;&gt;
+                          &lt;a href=&quot;http://cupcakeipsum.com/&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;
+                        &lt;/h3&gt;
+                        &lt;div class=&quot;node__posted-by&quot;&gt;
+                          &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
+                        &lt;/div&gt;
+                        &lt;div class=&quot;node__summary&quot;&gt;
+                          &lt;div class=&quot;field field--discussion-desc&quot;&gt;
+                            &lt;div class=&quot;field-items&quot;&gt;
+                              &lt;div class=&quot;field-item even&quot;&gt;
+                                &lt;p&gt;Sugar plum wafer souffl&eacute; ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.&lt;/p&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
@@ -748,14 +748,14 @@
                         &lt;div class=&quot;view view-content-author&quot;&gt;
                           &lt;div class=&quot;views-field views-field-field-user-photo&quot;&gt;        
                             &lt;div class=&quot;field-content profile-thumb__image--rounded&quot;&gt;
-                              &lt;img src=&quot;http://lorempixel.com/48/48/nightlife/3/&quot;&gt;
+                              &lt;img src=&quot;http://lorempixel.com/48/48/cats/1/&quot;&gt;
                             &lt;/div&gt;  
                           &lt;/div&gt;  
                         &lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;layout-slat__content&quot;&gt;
                         &lt;h3 class=&quot;node__title&quot;&gt;
-                          &lt;a href=&quot;http://cupcakeipsum.com/&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;
                         &lt;/h3&gt;
                         &lt;div class=&quot;node__posted-by&quot;&gt;
                           &lt;span&gt;Posted by &lt;a href=&quot;#&quot;&gt;&lt;/a&gt; on May 6, 2015 at 1:03pm&lt;/span&gt;
@@ -764,7 +764,7 @@
                           &lt;div class=&quot;field field--discussion-desc&quot;&gt;
                             &lt;div class=&quot;field-items&quot;&gt;
                               &lt;div class=&quot;field-item even&quot;&gt;
-                                &lt;p&gt;Sugar plum wafer souffl&eacute; ice cream. Wafer topping biscuit pie gummi bears topping. Gummies toffee powder applicake oat cake cookie. Bear claw candy tootsie roll fruitcake danish applicake candy canes macaroon. Liquorice tiramisu danish cotton candy gummies. Tiramisu dessert gummi bears macaroon sweet roll jelly-o gummi bears marzipan.&lt;/p&gt;
+                                &lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;
                               &lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
