--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.html
@@ -557,11 +557,11 @@
                       <article class="card card--icons">
                         <div class="card__number">30,000,000</div>
                         <div class="card__image">
-                          <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__list">
                             <div class="card__list-label">Due by:</div> 3/21/2015
                           </div> 
@@ -597,11 +597,11 @@
                       <article class="card card--icons">
                         <div class="card__number">30,000,000</div>
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                           <div class="card__list">
                             <div class="card__list-label">Due by:</div> 3/21/2015
                           </div> 
@@ -684,7 +684,7 @@
                     <div class="views-row">
                       <article class="card card--center">
                         <div class="card__image">
-                          <a href="#"><img src="http://lorempixel.com/500/300/people/2/" alt="Card 5:3"></a>
+                          <a href="#"><img src="http://lorempixel.com/500/300/people/6/" alt="Card 5:3"></a>
                         </div>
                         <div class="card__content">
                           <h3 class="card__title"><a href="#"></a></h3>
@@ -696,7 +696,7 @@
                     <div class="views-row">
                       <article class="card card--center">
                         <div class="card__image">
-                          <a href="#"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3"></a>
+                          <a href="#"><img src="http://lorempixel.com/500/300/people/1/" alt="Card 5:3"></a>
                         </div>
                         <div class="card__content">
                           <h3 class="card__title"><a href="#"></a></h3>
@@ -728,7 +728,7 @@
                     <div class="views-row">
                       <article class="card card--icons card--center">
                         <div class="card__image">
-                          <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
@@ -750,7 +750,7 @@
                     <div class="views-row">
                       <article class="card card--icons card--center">
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
@@ -803,11 +803,11 @@
                       <article class="card">
                         <h2 class="card__date">September 21</h2>
                         <div class="card__image">
-                          <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__meta">
                             <div class="card__list--split">
                               <span class="card__list-label">Location:</span> 
@@ -824,11 +824,11 @@
                       <article class="card">
                         <h2 class="card__date">September 21</h2>
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                           <div class="card__meta">
                             <div class="card__list--split">
                               <span class="card__list-label">Location:</span> 
@@ -873,12 +873,12 @@
                     <div class="views-row">
                       <article class="card card--icons">
                         <div class="card__image">
-                          <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
-                          <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                          <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--evidence" title="Evidence">0</div>
@@ -902,12 +902,12 @@
                     <div class="views-row">
                       <article class="card card--icons">
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                          <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                          <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                          <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--evidence" title="Evidence">0</div>
@@ -969,7 +969,7 @@
                       <article class="card card--background">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__author">
                             <div class="card__author-inner">
                               <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -983,7 +983,7 @@
                       <article class="card card--background">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                           <div class="card__author">
                             <div class="card__author-inner">
                               <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
@@ -1019,7 +1019,7 @@
                       <article class="card card--icons">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                          <h3 class="card__primary-title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
                           <div class="card__author">
                             <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                             <div class="card__author-name">Buffy Summers</div>
@@ -1050,7 +1050,7 @@
                       <article class="card card--icons">
                         <div class="card__content">
                           <h2 class="card__type">Toolkit</h2>
-                          <h3 class="card__primary-title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
+                          <h3 class="card__primary-title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
                           <div class="card__author">
                             <div class="card__author-image"><img src="../../images-patternlab/buffy-35-35.jpg"></div>
                             <div class="card__author-name">Buffy Summers</div>
@@ -1119,12 +1119,12 @@
                     <div class="views-row">
                       <article class="card card--icons">
                         <div class="card__image">
-                          <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://www.cheeseipsum.co.uk/"><img src="http://lorempixel.com/500/300/abstract/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
-                          <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+                          <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                          <div><p>Queso caerphilly cheesecake. Parmesan chalk and cheese port-salut port-salut babybel cottage cheese cheesy grin pepper jack. Croque monsieur paneer st. agur blue cheese emmental airedale monterey jack bavarian bergkase cheese triangles. Halloumi parmesan.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--innovation" title="Innovations">12</div>
@@ -1142,12 +1142,12 @@
                     <div class="views-row">
                       <article class="card card--icons">
                         <div class="card__image">
-                          <a href="http://baconipsum.com/"><img src="http://lorempixel.com/500/300/city/3/" alt="Card 5:3" height="300" width="500">
+                          <a href="http://slipsum.com/lite/"><img src="http://lorempixel.com/500/300/people/3/" alt="Card 5:3" height="300" width="500">
 </a>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title"><a href="http://baconipsum.com/">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></h3>
-                          <div><p>Boudin sausage jerky pastrami ground round salami biltong. Sausage fatback strip steak doner pork loin, pork belly drumstick ham short loin hamburger shankle. Short ribs sirloin rump tri-tip beef biltong. Meatball pig salami, jowl pork loin fatback short loin drumstick andouille.</p></div>
+                          <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                          <div><p>Especially dogs. Dogs are the best. Every time you come home, they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong man's worst enemy. You going to give me a dog for a pet, give me a pit bull.</p></div>
                           <div class="card__counts">
                             <div class="view">
                               <div class="has-icon--innovation" title="Innovations">12</div>
